--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -24,8 +24,11 @@ body {
   justify-content: center;
   height: 72px;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 15%);
+  background-color: white;
   margin-bottom: 2px;
   z-index: 10;
+
+  /* position: relative; */
 }
 
 .set-width-1000 {
@@ -125,6 +128,7 @@ body {
   justify-content: center;
   padding: 0% 5%;
   height: calc(100vh - 75px);
+  grid-gap: 40px;
 }
 
 .intro-section,
@@ -136,8 +140,22 @@ body {
   justify-content: center;
 }
 
-.intro-section .intro-text {
-  font-size: 400%;
+.intro-section .main-intro-text {
+  font-size: 350%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.intro-section .main-intro-text {
+  font-size: 350%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.intro-section .sub-intro-text {
+  font-size: 125%;
+  text-align: center;
+  margin: 0px 0px 30px 0px;
 }
 
 /*Modal*/
