--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -15,6 +15,8 @@ body {
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   font-family: "Ubuntu", sans-serif;
+  padding: 0px !important;
+  overflow: auto !important;
 }
 
 /*Header*/
